--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -37,6 +37,30 @@
     <hr />
 
     <!-- TODO #4 - Loop over the search results to display all job fields. -->
+    <!-- jobs is being pulled from searcjcontroller as an arraylist; then the job object is passed into the model -->
+    <table th:each = "e : ${jobs}" class="job-listing">
+        <tr>
+            <td>Name</td>
+            <td th:text="${e.name}"> </td>
+        </tr>
+        <tr>
+            <td>Location</td>
+            <td th:text="${e.location}"> </td>
+        </tr>
+        <tr>
+            <td>Employers</td>
+            <td th:text="${e.employer}"> </td>
+        </tr>
+        <tr>
+            <td>Position</td>
+            <td th:text="${e.positionType}"> </td>
+        </tr>
+        <tr>
+            <td>Skill</td>
+            <td th:text="${e.coreCompetency}"> </td>
+        </tr>
+        </table>
+
 
 </div>
 
