--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -13,19 +13,28 @@
 
         <table class="centeredTable">
             <tr>
-                <th:block th:each="column : ${columns}">
-                    <th th:text = "${column.value}"></th>
+                <th:block th:each="col : ${columns}">
+
+                    <th th:text = "${col.value}"></th>
+                    <!--Post the columns headers all / positiontype location literally -->
                 </th:block>
             </tr>
             <tr>
                 <!-- TODO #2: Complete the View Jobs By Category Table. -->
 
-                <td></td> <!-- Feel free to remove or modify this element if necessary. -->
+
+                <td >
+<!-- THIS IS FOR THE ALL BUTTON creating a link to all when selected -->
+                    <a th:href="@{/list/jobs/(column=all,value=all)}" th:text="all"></a>
+   <!-- This works because the List Controller method listJobsByColumnAndValue is expecting the params of column and value -->
+
+                    </td>
 
                 <td th:each="category : ${tableChoices}">
                     <ul>
                         <li th:each="item : ${category.value}">
                             <a th:href="@{/list/jobs(column=${category.key},value=${item})}" th:text="${item}"></a>
+                            <!-- This portion goes through and paste the stored data while hyperlinking them -->
                         </li>
                     </ul>
                 </td>
